@@ -13,8 +13,7 @@ ERROR SAVING WEBLINK="Error saving the Web link."
 HITS="Hits"
 LINKS="Links"
 NAME="Name"
-NO="No"
-NUM=";"
+NUM="#"
 ORDERING="Ordering"
 PLEASE PROVIDE A VALID URL="Please provide a valid URL."
 SUBMIT A WEB LINK="Submit A Web Link"
@@ -24,7 +23,6 @@ WEB LINK="Web Link"
 WEBLINK ITEM MUST HAVE A TITLE="Web Link Item must have a Title."
 WEBLINKS_DESC="We are regularly out on the Web. When we find a great site we list it."
 WEBLINK SAVED="Web Link saved"
-YES="Yes"
 YOU MUST HAVE A URL.="You must enter a URL."
 YOU MUST SELECT A CATEGORY.="You must select a Category."
 YOUR WEBLINK MUST CONTAIN A TITLE.="Your Web Link must contain a Title."
