@@ -1,0 +1,58 @@
+<?xml version="1.0" encoding="utf-8"?>
+<extension
+	type="module"
+	version="1.6.0"
+	client="site"
+	method="upgrade">
+	<name>Web Links</name>
+	<author>Joomla! Project</author>
+	<creationDate>July 2009</creationDate>
+	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<version>1.0.0</version>
+	<description>DESCWEBLINKS</description>
+	<files>
+	<filename module="mod_weblinks">mod_weblinks.php</filename>
+	</files>
+	<fields>	
+		<field name="catid" type="category" extension="com_weblinks" default="0" label="Category" description="fieldCATSELECT" />
+		<field name="count" type="text" default="5" label="Count" description="Desc_Count" />
+		<field name="ordering" type="list" default="title" label="Ordering" description="fieldORDERING">
+			<option value="title">Title</option>
+			<option value="order">Order</option>
+			<option value="hits">Hits</option>
+		</field>
+		<field name="direction" type="list" default="asc" label="Order Direction" description="fieldORDERINGDIRECTION">
+			<option value="asc">Ascending</option>
+			<option value="desc">Descending</option>
+		</field>
+		<field name="target" type="list" default="3" label="Target Window" description="PARAMTARGETWINDOW">
+			<option value="1">New Window</option>
+			<option value="2">Popup Window</option>
+			<option value="3">Same Window</option>			
+		</field>					
+		<field name="follow" type="radio" default="0" label="Follow/No Follow" description="PARAMFOLLOWNOFOLLOW">
+			<option value="follow">Follow</option>
+			<option value="no follow">No Follow</option>			
+		</field>
+		<field name="description" type="radio" default="0" label="Show Description" description="PARAMSHOWDESCRIPTION">
+			<option value="1">Yes</option>
+			<option value="0">No</option>
+		</field>
+		<field name="hits" type="radio" default="0" label="Show Hits" description="PARAMSHOWHITS">
+			<option value="1">Yes</option>
+			<option value="0">No</option>
+		</field>
+		<field name="@spacer" type="spacer" default="" label="" description="" />
+		<field name="moduleclass_sfx" type="text" default="" label="Module Class Suffix" description="PARAMMODULECLASSSUFFIX" />
+	</fields>
+	<fields group="advanced">
+		<field name="cache" type="list" default="0" label="Caching" description="Select whether to cache the content of this module">
+			<option value="1">Use global</option>
+			<option value="0">No caching</option>
+		</field>
+		<field name="cache_time" type="text" default="900" label="Cache Time" description="The time before the module is recached" />
+	</fields>
+</extension>
